Defined the city that has the highest num of sales

--- a/Sales_Analysis_Jup.ipynb
+++ b/Sales_Analysis_Jup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 107,
    "id": "05234a2a",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 108,
    "id": "a8e4e6de",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 109,
    "id": "8bfd2652",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
        "4           43 Hill St, Atlanta, GA 30301  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
        "4           43 Hill St, Atlanta, GA 30301  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
        "4  12/18/19 12:38           43 Hill St, Atlanta, GA 30301     12  "
       ]
      },
-     "execution_count": 87,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
        "4  12/18/19 12:38           43 Hill St, Atlanta, GA 30301     12    11.95  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
        "4         Atlanta (GA)  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -759,10 +759,255 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Order ID</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Quantity Ordered</th>\n",
+       "      <th>Price Each</th>\n",
+       "      <th>Order Date</th>\n",
+       "      <th>Purchase Address</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Sales</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>City</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Atlanta (GA)</th>\n",
+       "      <td>2956692956932957102957372957372957562957602957...</td>\n",
+       "      <td>USB-C Charging CableWired HeadphonesAAA Batter...</td>\n",
+       "      <td>16602</td>\n",
+       "      <td>2779908.20</td>\n",
+       "      <td>12/18/19 12:3812/16/19 16:4012/26/19 19:0912/1...</td>\n",
+       "      <td>43 Hill St, Atlanta, GA 30301856 12th St, Atla...</td>\n",
+       "      <td>104794</td>\n",
+       "      <td>2795498.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Austin (TX)</th>\n",
+       "      <td>2956802957022957032957032957542957892957982958...</td>\n",
+       "      <td>Lightning Charging CableWired HeadphonesAA Bat...</td>\n",
+       "      <td>11153</td>\n",
+       "      <td>1809873.61</td>\n",
+       "      <td>12/01/19 14:3012/21/19 18:5012/17/19 12:2712/1...</td>\n",
+       "      <td>338 Main St, Austin, TX 73301628 River St, Aus...</td>\n",
+       "      <td>69829</td>\n",
+       "      <td>1819581.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Boston (MA)</th>\n",
+       "      <td>2956772956812956812956812956812956872956952957...</td>\n",
+       "      <td>AA Batteries (4-pack)Google PhoneUSB-C Chargin...</td>\n",
+       "      <td>22528</td>\n",
+       "      <td>3637409.77</td>\n",
+       "      <td>12/20/19 19:1912/25/19 12:3712/25/19 12:3712/2...</td>\n",
+       "      <td>866 Pine St, Boston, MA 0221579 Elm St, Boston...</td>\n",
+       "      <td>141112</td>\n",
+       "      <td>3661642.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dallas (TX)</th>\n",
+       "      <td>2956722956732956742956782956792956942957242957...</td>\n",
+       "      <td>USB-C Charging CableBose SoundSport Headphones...</td>\n",
+       "      <td>16730</td>\n",
+       "      <td>2752627.82</td>\n",
+       "      <td>12/13/19 09:2912/15/19 23:2612/28/19 11:5112/0...</td>\n",
+       "      <td>813 Hickory St, Dallas, TX 75001718 Wilson St,...</td>\n",
+       "      <td>104620</td>\n",
+       "      <td>2767975.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Los Angeles (CA)</th>\n",
+       "      <td>2956762956882956912956922957062957142957162957...</td>\n",
+       "      <td>ThinkPad LaptopApple Airpods HeadphonesBose So...</td>\n",
+       "      <td>33289</td>\n",
+       "      <td>5421435.23</td>\n",
+       "      <td>12/28/19 17:1912/08/19 11:2112/22/19 18:3412/1...</td>\n",
+       "      <td>410 Lincoln St, Los Angeles, CA 90001546 Park ...</td>\n",
+       "      <td>208325</td>\n",
+       "      <td>5452570.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>New York City (NY)</th>\n",
+       "      <td>2956652956662956672956702956982956982957002957...</td>\n",
+       "      <td>Macbook Pro LaptopLG Washing MachineUSB-C Char...</td>\n",
+       "      <td>27932</td>\n",
+       "      <td>4635370.83</td>\n",
+       "      <td>12/30/19 00:0112/29/19 07:0312/12/19 18:2112/3...</td>\n",
+       "      <td>136 Church St, New York City, NY 10001562 2nd ...</td>\n",
+       "      <td>175741</td>\n",
+       "      <td>4664317.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Portland (ME)</th>\n",
+       "      <td>2956862957972958622960182961272961582962062962...</td>\n",
+       "      <td>USB-C Charging CableWired HeadphonesAAA Batter...</td>\n",
+       "      <td>2750</td>\n",
+       "      <td>447189.25</td>\n",
+       "      <td>12/17/19 16:1012/16/19 09:2312/03/19 14:2212/2...</td>\n",
+       "      <td>573 Maple St, Portland, ME 04101163 Washington...</td>\n",
+       "      <td>17144</td>\n",
+       "      <td>449758.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Portland (OR)</th>\n",
+       "      <td>2956712956822957342957572958192958572958922958...</td>\n",
+       "      <td>USB-C Charging CableUSB-C Charging CableAAA Ba...</td>\n",
+       "      <td>11303</td>\n",
+       "      <td>1860558.22</td>\n",
+       "      <td>12/16/19 15:1012/23/19 19:2512/25/19 12:3812/0...</td>\n",
+       "      <td>928 12th St, Portland, OR 97035780 Elm St, Por...</td>\n",
+       "      <td>70621</td>\n",
+       "      <td>1870732.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>San Francisco (CA)</th>\n",
+       "      <td>2956682956752956832956842956852956892956962956...</td>\n",
+       "      <td>27in FHD MonitorUSB-C Charging CableWired Head...</td>\n",
+       "      <td>50239</td>\n",
+       "      <td>8211461.74</td>\n",
+       "      <td>12/22/19 15:1312/13/19 13:5212/23/19 22:4612/0...</td>\n",
+       "      <td>410 6th St, San Francisco, CA 94016594 1st St,...</td>\n",
+       "      <td>315520</td>\n",
+       "      <td>8262203.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Seattle (WA)</th>\n",
+       "      <td>2956902956992957152957212957652957662957842957...</td>\n",
+       "      <td>Apple Airpods HeadphonesAA Batteries (4-pack)U...</td>\n",
+       "      <td>16553</td>\n",
+       "      <td>2733296.01</td>\n",
+       "      <td>12/04/19 00:4412/17/19 18:3212/17/19 18:2012/0...</td>\n",
+       "      <td>174 Cedar St, Seattle, WA 98101162 Maple St, S...</td>\n",
+       "      <td>104941</td>\n",
+       "      <td>2747755.48</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                              Order ID  \\\n",
+       "City                                                                     \n",
+       " Atlanta (GA)        2956692956932957102957372957372957562957602957...   \n",
+       " Austin (TX)         2956802957022957032957032957542957892957982958...   \n",
+       " Boston (MA)         2956772956812956812956812956812956872956952957...   \n",
+       " Dallas (TX)         2956722956732956742956782956792956942957242957...   \n",
+       " Los Angeles (CA)    2956762956882956912956922957062957142957162957...   \n",
+       " New York City (NY)  2956652956662956672956702956982956982957002957...   \n",
+       " Portland (ME)       2956862957972958622960182961272961582962062962...   \n",
+       " Portland (OR)       2956712956822957342957572958192958572958922958...   \n",
+       " San Francisco (CA)  2956682956752956832956842956852956892956962956...   \n",
+       " Seattle (WA)        2956902956992957152957212957652957662957842957...   \n",
+       "\n",
+       "                                                               Product  \\\n",
+       "City                                                                     \n",
+       " Atlanta (GA)        USB-C Charging CableWired HeadphonesAAA Batter...   \n",
+       " Austin (TX)         Lightning Charging CableWired HeadphonesAA Bat...   \n",
+       " Boston (MA)         AA Batteries (4-pack)Google PhoneUSB-C Chargin...   \n",
+       " Dallas (TX)         USB-C Charging CableBose SoundSport Headphones...   \n",
+       " Los Angeles (CA)    ThinkPad LaptopApple Airpods HeadphonesBose So...   \n",
+       " New York City (NY)  Macbook Pro LaptopLG Washing MachineUSB-C Char...   \n",
+       " Portland (ME)       USB-C Charging CableWired HeadphonesAAA Batter...   \n",
+       " Portland (OR)       USB-C Charging CableUSB-C Charging CableAAA Ba...   \n",
+       " San Francisco (CA)  27in FHD MonitorUSB-C Charging CableWired Head...   \n",
+       " Seattle (WA)        Apple Airpods HeadphonesAA Batteries (4-pack)U...   \n",
+       "\n",
+       "                     Quantity Ordered  Price Each  \\\n",
+       "City                                                \n",
+       " Atlanta (GA)                   16602  2779908.20   \n",
+       " Austin (TX)                    11153  1809873.61   \n",
+       " Boston (MA)                    22528  3637409.77   \n",
+       " Dallas (TX)                    16730  2752627.82   \n",
+       " Los Angeles (CA)               33289  5421435.23   \n",
+       " New York City (NY)             27932  4635370.83   \n",
+       " Portland (ME)                   2750   447189.25   \n",
+       " Portland (OR)                  11303  1860558.22   \n",
+       " San Francisco (CA)             50239  8211461.74   \n",
+       " Seattle (WA)                   16553  2733296.01   \n",
+       "\n",
+       "                                                            Order Date  \\\n",
+       "City                                                                     \n",
+       " Atlanta (GA)        12/18/19 12:3812/16/19 16:4012/26/19 19:0912/1...   \n",
+       " Austin (TX)         12/01/19 14:3012/21/19 18:5012/17/19 12:2712/1...   \n",
+       " Boston (MA)         12/20/19 19:1912/25/19 12:3712/25/19 12:3712/2...   \n",
+       " Dallas (TX)         12/13/19 09:2912/15/19 23:2612/28/19 11:5112/0...   \n",
+       " Los Angeles (CA)    12/28/19 17:1912/08/19 11:2112/22/19 18:3412/1...   \n",
+       " New York City (NY)  12/30/19 00:0112/29/19 07:0312/12/19 18:2112/3...   \n",
+       " Portland (ME)       12/17/19 16:1012/16/19 09:2312/03/19 14:2212/2...   \n",
+       " Portland (OR)       12/16/19 15:1012/23/19 19:2512/25/19 12:3812/0...   \n",
+       " San Francisco (CA)  12/22/19 15:1312/13/19 13:5212/23/19 22:4612/0...   \n",
+       " Seattle (WA)        12/04/19 00:4412/17/19 18:3212/17/19 18:2012/0...   \n",
+       "\n",
+       "                                                      Purchase Address  \\\n",
+       "City                                                                     \n",
+       " Atlanta (GA)        43 Hill St, Atlanta, GA 30301856 12th St, Atla...   \n",
+       " Austin (TX)         338 Main St, Austin, TX 73301628 River St, Aus...   \n",
+       " Boston (MA)         866 Pine St, Boston, MA 0221579 Elm St, Boston...   \n",
+       " Dallas (TX)         813 Hickory St, Dallas, TX 75001718 Wilson St,...   \n",
+       " Los Angeles (CA)    410 Lincoln St, Los Angeles, CA 90001546 Park ...   \n",
+       " New York City (NY)  136 Church St, New York City, NY 10001562 2nd ...   \n",
+       " Portland (ME)       573 Maple St, Portland, ME 04101163 Washington...   \n",
+       " Portland (OR)       928 12th St, Portland, OR 97035780 Elm St, Por...   \n",
+       " San Francisco (CA)  410 6th St, San Francisco, CA 94016594 1st St,...   \n",
+       " Seattle (WA)        174 Cedar St, Seattle, WA 98101162 Maple St, S...   \n",
+       "\n",
+       "                      Month       Sales  \n",
+       "City                                     \n",
+       " Atlanta (GA)        104794  2795498.58  \n",
+       " Austin (TX)          69829  1819581.75  \n",
+       " Boston (MA)         141112  3661642.01  \n",
+       " Dallas (TX)         104620  2767975.40  \n",
+       " Los Angeles (CA)    208325  5452570.80  \n",
+       " New York City (NY)  175741  4664317.43  \n",
+       " Portland (ME)        17144   449758.27  \n",
+       " Portland (OR)        70621  1870732.34  \n",
+       " San Francisco (CA)  315520  8262203.91  \n",
+       " Seattle (WA)        104941  2747755.48  "
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results = all_data.groupby('City').sum()\n",
+    "results"
+   ]
   },
   {
    "cell_type": "code",
