visualised results by matplotlib chart

--- a/Sales_Analysis_Jup.ipynb
+++ b/Sales_Analysis_Jup.ipynb
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +999,7 @@
        " Seattle (WA)        104941  2747755.48  "
       ]
      },
-     "execution_count": 118,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1011,10 +1011,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'cities' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/pernebayarailym/Documents/Portfolio Projects AP/Python Projects/Project_9_DataScience_Pandas/Sales_Analysis_Jup.ipynb Cell 22\u001b[0m line \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/pernebayarailym/Documents/Portfolio%20Projects%20AP/Python%20Projects/Project_9_DataScience_Pandas/Sales_Analysis_Jup.ipynb#X43sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/pernebayarailym/Documents/Portfolio%20Projects%20AP/Python%20Projects/Project_9_DataScience_Pandas/Sales_Analysis_Jup.ipynb#X43sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m months \u001b[39m=\u001b[39m all_data[\u001b[39m'\u001b[39m\u001b[39mCity\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39munique()\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/pernebayarailym/Documents/Portfolio%20Projects%20AP/Python%20Projects/Project_9_DataScience_Pandas/Sales_Analysis_Jup.ipynb#X43sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m plt\u001b[39m.\u001b[39mbar(cities, results[\u001b[39m'\u001b[39m\u001b[39mSales\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/pernebayarailym/Documents/Portfolio%20Projects%20AP/Python%20Projects/Project_9_DataScience_Pandas/Sales_Analysis_Jup.ipynb#X43sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m plt\u001b[39m.\u001b[39mxticks(cities, rotation \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mvertical\u001b[39m\u001b[39m'\u001b[39m, size \u001b[39m=\u001b[39m \u001b[39m8\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/pernebayarailym/Documents/Portfolio%20Projects%20AP/Python%20Projects/Project_9_DataScience_Pandas/Sales_Analysis_Jup.ipynb#X43sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m plt\u001b[39m.\u001b[39mylabel(\u001b[39m'\u001b[39m\u001b[39mSales in USD ($)\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'cities' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt \n",
+    "\n",
+    "cities = all_data['City'].unique()\n",
+    "\n",
+    "plt.bar(cities, results['Sales'])\n",
+    "plt.xticks(cities, rotation = 'vertical', size = 8)\n",
+    "plt.ylabel('Sales in USD ($)')\n",
+    "plt.xlabel('City name')\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
