Created Hour & Minute columns

--- a/Sales_Analysis_Jup.ipynb
+++ b/Sales_Analysis_Jup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 131,
    "id": "05234a2a",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 132,
    "id": "a8e4e6de",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 133,
    "id": "8bfd2652",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
        "4           43 Hill St, Atlanta, GA 30301  "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
        "4           43 Hill St, Atlanta, GA 30301  "
       ]
      },
-     "execution_count": 110,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
        "4  12/18/19 12:38           43 Hill St, Atlanta, GA 30301     12  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
        "4  12/18/19 12:38           43 Hill St, Atlanta, GA 30301     12    11.95  "
       ]
      },
-     "execution_count": 114,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
        "4         Atlanta (GA)  "
       ]
      },
-     "execution_count": 115,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +999,7 @@
        " Seattle (WA)        104941  2747755.48  "
       ]
      },
-     "execution_count": 119,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -1038,18 +1038,167 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Question 3: What time should we display advertisements to maximise likelihood of customer's buying product?"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "all_data['Order Date'] = pd.to_datetime(all_data['Order Date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Order ID</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Quantity Ordered</th>\n",
+       "      <th>Price Each</th>\n",
+       "      <th>Order Date</th>\n",
+       "      <th>Purchase Address</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Hour</th>\n",
+       "      <th>Minute</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>295665</td>\n",
+       "      <td>Macbook Pro Laptop</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1700.00</td>\n",
+       "      <td>2019-12-30 00:01:00</td>\n",
+       "      <td>136 Church St, New York City, NY 10001</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1700.00</td>\n",
+       "      <td>New York City (NY)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>295666</td>\n",
+       "      <td>LG Washing Machine</td>\n",
+       "      <td>1</td>\n",
+       "      <td>600.00</td>\n",
+       "      <td>2019-12-29 07:03:00</td>\n",
+       "      <td>562 2nd St, New York City, NY 10001</td>\n",
+       "      <td>12</td>\n",
+       "      <td>600.00</td>\n",
+       "      <td>New York City (NY)</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>295667</td>\n",
+       "      <td>USB-C Charging Cable</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>2019-12-12 18:21:00</td>\n",
+       "      <td>277 Main St, New York City, NY 10001</td>\n",
+       "      <td>12</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>New York City (NY)</td>\n",
+       "      <td>18</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>295668</td>\n",
+       "      <td>27in FHD Monitor</td>\n",
+       "      <td>1</td>\n",
+       "      <td>149.99</td>\n",
+       "      <td>2019-12-22 15:13:00</td>\n",
+       "      <td>410 6th St, San Francisco, CA 94016</td>\n",
+       "      <td>12</td>\n",
+       "      <td>149.99</td>\n",
+       "      <td>San Francisco (CA)</td>\n",
+       "      <td>15</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>295669</td>\n",
+       "      <td>USB-C Charging Cable</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>2019-12-18 12:38:00</td>\n",
+       "      <td>43 Hill St, Atlanta, GA 30301</td>\n",
+       "      <td>12</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>Atlanta (GA)</td>\n",
+       "      <td>12</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Order ID               Product  Quantity Ordered  Price Each  \\\n",
+       "0   295665    Macbook Pro Laptop                 1     1700.00   \n",
+       "1   295666    LG Washing Machine                 1      600.00   \n",
+       "2   295667  USB-C Charging Cable                 1       11.95   \n",
+       "3   295668      27in FHD Monitor                 1      149.99   \n",
+       "4   295669  USB-C Charging Cable                 1       11.95   \n",
+       "\n",
+       "           Order Date                        Purchase Address  Month    Sales  \\\n",
+       "0 2019-12-30 00:01:00  136 Church St, New York City, NY 10001     12  1700.00   \n",
+       "1 2019-12-29 07:03:00     562 2nd St, New York City, NY 10001     12   600.00   \n",
+       "2 2019-12-12 18:21:00    277 Main St, New York City, NY 10001     12    11.95   \n",
+       "3 2019-12-22 15:13:00     410 6th St, San Francisco, CA 94016     12   149.99   \n",
+       "4 2019-12-18 12:38:00           43 Hill St, Atlanta, GA 30301     12    11.95   \n",
+       "\n",
+       "                  City  Hour  Minute  \n",
+       "0   New York City (NY)     0       1  \n",
+       "1   New York City (NY)     7       3  \n",
+       "2   New York City (NY)    18      21  \n",
+       "3   San Francisco (CA)    15      13  \n",
+       "4         Atlanta (GA)    12      38  "
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_data['Hour'] = all_data['Order Date'].dt.hour\n",
+    "all_data['Minute'] = all_data['Order Date'].dt.minute\n"
+   ]
   },
   {
    "cell_type": "code",
